# VelvelSentinal

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
agents/arbitrage-agent/: mcp-manifest.json  package.json
agents/arbitrage-agent/src/: agent.ts  dex-prices.ts  index.ts
agents/governance-agent/: mcp-manifest.json  package.json
agents/governance-agent/src/: agent.ts  index.ts
agents/sentinel-agent/: mcp-manifest.json  package.json
agents/sentinel-agent/src/: agent.ts  index.ts
contracts/: hardhat.config.ts  package.json  tsconfig.json
contracts/artifacts/@openzeppelin/contracts/token/ERC20/utils/SafeERC20.sol/: SafeERC20.dbg.json
contracts/artifacts/@openzeppelin/contracts/utils/Panic.sol/: Panic.dbg.json
contracts/artifacts/@openzeppelin/contracts/utils/cryptography/ECDSA.sol/: ECDSA.dbg.json
contracts/artifacts/src/AgentRegistry.sol/: AgentRegistry.json
contracts/artifacts/src/SyndicateVault.sol/: SyndicateVault.dbg.json  SyndicateVault.json
contracts/cache/: solidity-files-cache.json
contracts/scripts/: check-balance.ts  deploy.ts
contracts/src/: AgentRegistry.sol  SyndicateVault.sol
contracts/typechain-types/: hardhat.d.ts  index.ts
contracts/typechain-types/factories/src/: AgentRegistry__factory.ts  SyndicateVault__factory.ts  index.ts
contracts/typechain-types/src/: AgentRegistry.ts  SyndicateVault.ts  index.ts
crates/: Cargo.toml
crates/psy-integration/: Cargo.toml
crates/psy-integration/src/: lib.rs  registry.rs  reputation.rs  syndicate.rs
crates/sdkey-manager/: Cargo.toml
crates/sdkey-manager/src/: delegation.rs  lib.rs  permissions.rs  sdkey.rs
crates/zk-proofs/: Cargo.toml
crates/zk-proofs/src/: lib.rs  performance.rs  proofs.rs  verifier.rs
dashboard/: next.config.mjs  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
dashboard/src/app/arbitrage/: page.tsx
dashboard/src/app/governance/: page.tsx
dashboard/src/app/security/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/components/: AgentCard.tsx  AlertsPanel.tsx  HeaderBar.tsx  OpportunitiesPanel.tsx  Sidebar.tsx  StatCard.tsx
dashboard/src/lib/: api.ts  config.ts  utils.ts
docker/: Dockerfile.agent  Dockerfile.dashboard  docker-compose.yml  nginx.conf
docs/: API_REFERENCE.md  IMPLEMENTATION_GUIDE.md  PENDING_SETUP.md  SETUP.md  TECH_STACK.md
