[workspace]
members = ["sdkey-manager", "zk-proofs", "psy-integration"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Velvet Sentinel Team"]
repository = "https://github.com/velvet-sentinel/velvet-sentinel"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"

# ZK (placeholder - real impl would use specific ZK libraries)
ark-std = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for API calls)
reqwest = { version = "0.11", features = ["json"] }

# Testing
proptest = "1.4"
