[package]
name = "psy-integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Psy Protocol integration for Velvet Sentinel agents"

[dependencies]
sdkey-manager = { path = "../sdkey-manager" }
zk-proofs = { path = "../zk-proofs" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tracing-subscriber = { workspace = true }
