[package]
name = "zk-proofs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Zero-knowledge proof generation for agent performance verification"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

# Note: For production, would use actual ZK libraries like:
# - snarkjs bindings
# - bellman
# - halo2
# Currently using placeholder implementations

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
